feat(card): add high-contrast border

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -96,7 +96,7 @@
 
   // Secondary
   --#{$card}--m-secondary--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
-  --#{$card}--m-secondary--BorderColor: transparent;
+  --#{$card}--m-secondary--BorderColor: var(--pf-t--global--border--color--high-contrast);
 
   // Full height
   --#{$card}--m-full-height--Height: 100%;
