--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -58,11 +58,10 @@
   --#{$wizard}__nav-link-main--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
   --#{$wizard}__nav-link-main--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
   --#{$wizard}__nav-link-main--BorderRadius: var(--pf-t--global--border--radius--small);
-  --#{$wizard}__nav-link-main--BorderColor: transparent;
-  --#{$wizard}__nav-link-main--BorderWidth: var(--pf-t--global--border--width--regular);
-  --#{$wizard}__nav-link--hover--nav-link-main--BorderColor: var(--pf-t--global--border--color--high-contrast);
-  --#{$wizard}__nav-link--m-current--nav-link-main--BorderColor: var(--pf-t--global--border--color--high-contrast);
-  --#{$wizard}__nav-link--m-current--nav-link-main--BorderWidth: var(--pf-t--global--border--width--strong);
+  --#{$wizard}__nav-link-main--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$wizard}__nav-link-main--BorderWidth: 0;
+  --#{$wizard}__nav-link--hover--nav-link-main--BorderWidth: var(--pf-t--global--high-contrast--border--width--regular);
+  --#{$wizard}__nav-link--m-current--nav-link-main--BorderWidth: var(--pf-t--global--high-contrast--border--width--strong);
 
   // Nav link toggle icon
   --#{$wizard}__nav-link-toggle--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
@@ -483,7 +482,6 @@
   &.pf-m-current {
     --#{$wizard}__nav-link--Color: var(--#{$wizard}__nav-link--m-current--Color);
     --#{$wizard}__nav-link-main--BackgroundColor: var(--#{$wizard}__nav-link--m-current--BackgroundColor);
-    --#{$wizard}__nav-link-main--BorderColor: var(--#{$wizard}__nav-link--m-current--nav-link-main--BorderColor);
     --#{$wizard}__nav-link-main--BorderWidth: var(--#{$wizard}__nav-link--m-current--nav-link-main--BorderWidth); 
 
     @at-root .#{$wizard}__toggle-num,
@@ -511,7 +509,7 @@
   &:where(:hover, :focus) {
     --#{$wizard}__nav-link--Color: var(--#{$wizard}__nav-link--hover--Color);
     --#{$wizard}__nav-link-main--BackgroundColor: var(--#{$wizard}__nav-link--hover--BackgroundColor);
-    --#{$wizard}__nav-link-main--BorderColor: var(--#{$wizard}__nav-link--hover--nav-link-main--BorderColor);
+    --#{$wizard}__nav-link-main--BorderWidth: var(--#{$wizard}__nav-link--hover--nav-link-main--BorderWidth);
   }
 
   // override the button background/color for disabled nav links
