--- a/src/patternfly/components/SimpleList/simple-list.scss
+++ b/src/patternfly/components/SimpleList/simple-list.scss
@@ -14,11 +14,15 @@
   --#{$simple-list}__item-link--hover--Color: var(--pf-t--global--text--color--subtle);
   --#{$simple-list}__item-link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
   --#{$simple-list}__item-link--BorderRadius: var(--pf-t--global--border--radius--tiny);
-
+  --#{$simple-list}__item-link--BorderWidth: 0;
+  --#{$simple-list}__item-link--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$simple-list}__item-link--hover--BorderWidth: var(--pf-t--global--high-contrast--border--width--regular);
+  
   // Simple list item link
   --#{$simple-list}__item-link--m-link--Color: var(--pf-t--global--text--color--link--default);
   --#{$simple-list}__item-link--m-link--m-current--Color: var(--pf-t--global--text--color--link--hover);
   --#{$simple-list}__item-link--m-link--hover--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$simple-list}__item-link--m-current--BorderWidth: var(--pf-t--global--high-contrast--border--width--strong);
 
   // Simple list title
   --#{$simple-list}__title--PaddingBlockStart: var(--pf-t--global--spacer--sm);
@@ -34,6 +38,7 @@
 }
 
 .#{$simple-list}__item-link {
+  position: relative;
   display: block;
   width: 100%;
   padding-block-start: var(--#{$simple-list}__item-link--PaddingBlockStart);
@@ -48,6 +53,15 @@
   border: none;
   border-radius: var(--#{$simple-list}__item-link--BorderRadius);
 
+  &::after {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+    border: var(--#{$simple-list}__item-link--BorderWidth) solid var(--#{$simple-list}__item-link--BorderColor);
+    border-radius: inherit;
+  }
+
   &.pf-m-link {
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--m-link--Color);
     --#{$simple-list}__item-link--hover--Color: var(--#{$simple-list}__item-link--m-link--m-current--Color);
@@ -57,6 +71,7 @@
   &:is(:hover, :focus) {
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--hover--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--hover--Color);
+    --#{$simple-list}__item-link--BorderWidth: var(--#{$simple-list}__item-link--hover--BorderWidth);
 
     text-decoration-line: none;
   }
@@ -64,6 +79,7 @@
   &.pf-m-current {
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--m-current--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--m-current--Color);
+    --#{$simple-list}__item-link--BorderWidth: var(--#{$simple-list}__item-link--m-current--BorderWidth);
   }
 }
 
