--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -16,6 +16,7 @@
   --#{$button}--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$button}--BackgroundColor: transparent;
   --#{$button}--BorderColor: transparent;
+  --#{$button}--BorderColor--high-contrast: var(--pf-t--global--border--color--high-contrast);
   --#{$button}--BorderWidth: var(--pf-t--global--border--width--action--default);
   --#{$button}--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$button}--TextDecorationLine: none;
@@ -27,8 +28,7 @@
   --#{$button}--TransitionProperty: color, background, border-width, border-color;
   --#{$button}--ScaleX: 1;
   --#{$button}--ScaleY: 1;
-  --#{$button}--BorderWidth--high-contrast: var(--pf-t--global--border--width--regular);
-  --#{$button}--BorderColor--high-contrast: var(--pf-t--global--border--color--high-contrast);
+  --#{$button}--after--Inset: 0;
 
   // Hover
   --#{$button}--hover--BackgroundColor: transparent;
@@ -106,6 +106,9 @@
   --#{$button}--m-link--m-clicked__icon--Color: var(--pf-t--global--text--color--brand--clicked);
   --#{$button}--m-link--m-small--PaddingInlineEnd: var(--pf-t--global--spacer--action--horizontal--plain--compact);
   --#{$button}--m-link--m-small--PaddingInlineStart: var(--pf-t--global--spacer--action--horizontal--plain--compact);
+  --#{$button}--m-link--BorderWidth: var(--pf-t--global--border--width--action--plain--default);
+  --#{$button}--m-link--m-clicked--BorderWidth: var(--pf-t--global--border--width--action--plain--clicked);
+  --#{$button}--m-link--hover--BorderWidth: var(--pf-t--global--border--width--action--plain--hover);
 
   // Link danger
   --#{$button}--m-link--m-danger--Color: var(--pf-t--global--text--color--status--danger--default);
@@ -145,6 +148,7 @@
   --#{$button}--m-link--m-inline--hover--Color: var(--pf-t--global--text--color--brand--hover);
   --#{$button}--m-link--m-inline--hover__icon--Color: var(--pf-t--global--icon--color--brand--hover);
   --#{$button}--m-link--m-inline--hover--TextDecorationColor: currentcolor;
+  --#{$button}--m-link--m-inline--after--Inset: calc(#{pf-size-prem(2px)} * -1);
 
   // Plain
   --#{$button}--m-plain--BorderRadius: var(--pf-t--global--border--radius--small);
@@ -162,6 +166,9 @@
   --#{$button}--m-plain--disabled--BackgroundColor: transparent;
   --#{$button}--m-plain--m-small--PaddingInlineEnd: var(--pf-t--global--spacer--action--horizontal--plain--compact);
   --#{$button}--m-plain--m-small--PaddingInlineStart: var(--pf-t--global--spacer--action--horizontal--plain--compact);
+  --#{$button}--m-plain--BorderWidth: var(--pf-t--global--border--width--action--plain--default);
+  --#{$button}--m-plain--m-clicked--BorderWidth: var(--pf-t--global--border--width--action--plain--clicked);
+  --#{$button}--m-plain--hover--BorderWidth: var(--pf-t--global--border--width--action--plain--hover);
 
   // Plain no padding
   --#{$button}--m-plain--m-no-padding--MinWidth: auto;
@@ -176,7 +183,7 @@
   --#{$button}--m-plain--m-no-padding--hover__icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$button}--m-plain--m-no-padding--hover--BackgroundColor: transparent;
   --#{$button}--m-plain--m-no-padding--m-clicked--BackgroundColor: transparent;
-  --#{$button}__progress--Color: var(--#{$button}__icon--Color);
+  --#{$button}--m-plain--m-no-padding--after--Inset: calc(#{pf-size-prem(2px)} * -1);
 
   // Control
   --#{$button}--m-control--BorderRadius: var(--pf-t--global--border--radius--small);
@@ -403,7 +410,7 @@
 
   &::after {
     position: absolute;
-    inset: 0;
+    inset: var(--#{$button}--after--Inset);
     pointer-events: none;
     content: "";
     border: var(--#{$button}--BorderWidth) solid;
@@ -477,6 +484,10 @@
     --#{$button}--PaddingInlineEnd: var(--#{$button}--m-link--PaddingInlineEnd);
     --#{$button}--PaddingInlineStart: var(--#{$button}--m-link--PaddingInlineStart);
     --#{$button}--Color: var(--#{$button}--m-link--Color);
+    --#{$button}--BorderWidth: var(--#{$button}--m-link--BorderWidth);
+    --#{$button}--hover--BorderWidth: var(--#{$button}--m-link--hover--BorderWidth);
+    --#{$button}--m-clicked--BorderWidth: var(--#{$button}--m-link--m-clicked--BorderWidth);
+    --#{$button}--BorderColor: var(--#{$button}--BorderColor--high-contrast);
     --#{$button}--BorderRadius: var(--#{$button}--m-link--BorderRadius);
     --#{$button}--BackgroundColor: var(--#{$button}--m-link--BackgroundColor);
     --#{$button}__icon--Color: var(--#{$button}--m-link__icon--Color);
@@ -488,18 +499,6 @@
     --#{$button}--m-clicked__icon--Color: var(--#{$button}--m-link--m-clicked__icon--Color);
     --#{$button}--m-small--PaddingInlineEnd: var(--#{$button}--m-link--m-small--PaddingInlineEnd);
     --#{$button}--m-small--PaddingInlineStart: var(--#{$button}--m-link--m-small--PaddingInlineStart);
-
-    @media (prefers-contrast: more) {
-      &:hover:not(.pf-m-inline) {
-        --#{$button}--BorderWidth: var(--#{$button}--BorderWidth--high-contrast);
-        --#{$button}--BorderColor: var(--#{$button}--BorderColor--high-contrast);
-      }
-    
-      &.pf-m-clicked:not(.pf-m-inline) {
-        --#{$button}--BorderWidth: var(--#{$button}--m-clicked--BorderWidth--high-contrast);
-        --#{$button}--BorderColor: var(--#{$button}--m-clicked--BorderColor--high-contrast);
-      }
-    }
   
     &.pf-m-inline {
       @at-root span#{&} {
@@ -534,6 +533,7 @@
       --#{$button}--hover--TextDecorationColor: var(--#{$button}--m-link--m-inline--hover--TextDecorationColor);
       --#{$button}--m-link--hover--Color: var(--#{$button}--m-link--m-inline--hover--Color);
       --#{$button}--m-link--hover__icon--Color: var(--#{$button}--m-link--m-inline--hover__icon--Color);
+      --#{$button}--after--Inset: var(--#{$button}--m-link--m-inline--after--Inset);
 
       text-align: start;
       white-space: normal;
@@ -655,6 +655,10 @@
 
   // Icon buttons
   &.pf-m-plain {
+    --#{$button}--BorderWidth: var(--#{$button}--m-plain--BorderWidth);
+    --#{$button}--hover--BorderWidth: var(--#{$button}--m-plain--hover--BorderWidth);
+    --#{$button}--m-clicked--BorderWidth: var(--#{$button}--m-plain--m-clicked--BorderWidth);
+    --#{$button}--BorderColor: var(--#{$button}--BorderColor--high-contrast);
     --#{$button}--BorderRadius: var(--#{$button}--m-plain--BorderRadius);
     --#{$button}--Color: var(--#{$button}--m-plain--Color);
     --#{$button}__icon--Color: var(--#{$button}--m-plain__icon--Color);
@@ -683,21 +687,10 @@
       --#{$button}--PaddingInlineStart: var(--#{$button}--m-plain--m-no-padding--PaddingInlineStart);
       --#{$button}--m-small--PaddingInlineEnd: var(--#{$button}--m-plain--m-no-padding--m-small--PaddingInlineEnd);
       --#{$button}--m-small--PaddingInlineStart: var(--#{$button}--m-plain--m-no-padding--m-small--PaddingInlineStart);
-  
+      --#{$button}--after--Inset: var(--#{$button}--m-plain--m-no-padding--after--Inset);
+
       min-width: var(--#{$button}--m-plain--m-no-padding--MinWidth);
       background: var(--#{$button}--BackgroundColor); // override the ripple background
-    }
-
-    @media (prefers-contrast: more) {
-      &:hover {
-      --#{$button}--BorderWidth: var(--#{$button}--BorderWidth--high-contrast);
-      --#{$button}--BorderColor: var(--#{$button}--BorderColor--high-contrast);
-      }
-  
-      &.pf-m-clicked {
-        --#{$button}--BorderWidth: var(--#{$button}--m-clicked--BorderWidth--high-contrast);
-        --#{$button}--BorderColor: var(--#{$button}--m-clicked--BorderColor--high-contrast);
-      }
     }
   }
 
