--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -505,6 +505,9 @@
         --#{$button}--m-link--m-inline--Display: var(--#{$button}--span--m-link--m-inline--Display);
         --#{$button}__icon--m-start--MarginInlineEnd: var(--#{$button}--span--m-link--m-inline__icon--m-start--MarginInlineEnd);
         --#{$button}__icon--m-end--MarginInlineStart: var(--#{$button}--span--m-link--m-inline__icon--m-end--MarginInlineStart);
+        --#{$button}--BorderWidth: 0;
+        --#{$button}--hover--BorderWidth: 0;
+        --#{$button}--m-clicked--BorderWidth: 0;
       }
 
       --#{$button}--Display: var(--#{$button}--m-link--m-inline--Display);
