--- a/src/patternfly/base/tokens/tokens-highcontrast-dark.scss
+++ b/src/patternfly/base/tokens/tokens-highcontrast-dark.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 13 Aug 2025 18:00:32 GMT
+// Generated on Mon, 25 Aug 2025 19:17:30 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
@@ -236,6 +236,7 @@
   --pf-t--global--border--color--brand--default: var(--pf-t--global--color--brand--default);
   --pf-t--global--border--color--brand--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--border--color--high-contrast: var(--pf-t--global--border--color--default);
+  --pf-t--global--border--color--page--default: var(--pf-t--global--border--color--default);
   --pf-t--global--border--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--border--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
   --pf-t--global--border--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
