--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -79,7 +79,7 @@
   padding-inline-start: var(--#{$breadcrumb}__link--PaddingInlineStart); // use a mutable value for alignment control
   padding-inline-end: var(--#{$breadcrumb}__link--PaddingInlineEnd); // use a mutable value for alignment control
   font-size: inherit;
-  font-weight: inherit;
+  font-weight: var(--#{$breadcrumb}__link--FontWeight, inherit);
   line-height: inherit;
   color: var(--#{$breadcrumb}__link--Color);
   text-decoration-line: var(--#{$breadcrumb}__link--TextDecorationLine);
