--- a/src/patternfly/components/HelperText/helper-text-item.hbs
+++ b/src/patternfly/components/HelperText/helper-text-item.hbs
@@ -12,12 +12,10 @@
   {{#if helper-text-item--attribute}}
     {{{helper-text-item--attribute}}}
   {{/if}}>
-  {{#unless helper-text-item--HasNoIcon}}
+  {{#ifAny helper-text-item--IsSuccess helper-text-item--IsError helper-text-item--IsWarning helper-text-item--IsIndeterminate helper-text-item-icon--type}}
     {{> helper-text-item-icon}}
-  {{/unless}}
+  {{/ifAny}}
   {{#if helper-text--value}}
     {{> helper-text-item-text}}
-  {{else if @partial-block}}
-    {{> @partial-block}}
   {{/if}}
 </{{#if helper-text--IsList}}li{{else}}div{{/if}}>
